{
  "version": 4,
  "terraform_version": "1.2.9",
  "serial": 795,
  "lineage": "39bd2562-ed07-afd9-7b63-5f3ea12a1a04",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f4c8a24f11bef02",
            "domain": "vpc",
            "id": "eipalloc-06f4c8a24f11bef02",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-54-251-145-104.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.145.104",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "midterm-nat-eip"
            },
            "tags_all": {
              "Name": "midterm-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0cf51bce7bfbc9d76",
            "association_id": "eipassoc-0153a5e56ffddba9e",
            "domain": "vpc",
            "id": "eipalloc-0cf51bce7bfbc9d76",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0c4fb8b81af17e568",
            "private_dns": "ip-10-0-1-145.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.145",
            "public_dns": "ec2-52-74-226-175.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "52.74.226.175",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "midterm-web-eip"
            },
            "tags_all": {
              "Name": "midterm-web-eip"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_network_interface.web",
            "aws_security_group.web",
            "aws_subnet.subnet_public_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:instance/i-06525eda253d99d65",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06525eda253d99d65",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sds-midterm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-03996975926d0a879"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-0abdad60d9494721b"
              }
            ],
            "primary_network_interface_id": "eni-03996975926d0a879",
            "private_dns": "ip-10-0-102-88.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.102.88",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-058c5bca907034a6c",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5384e98f92fe6a7",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-083a0ff8c4e0d7f31"
            ]
          },
          "dependencies": [
            "aws_key_pair.key_auth",
            "aws_network_interface.db",
            "aws_network_interface.db_web",
            "aws_security_group.db",
            "aws_security_group.db_web",
            "aws_subnet.subnet_private_1",
            "aws_subnet.subnet_private_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d058fe428540cd89",
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:instance/i-0f8937b3975b00dab",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "web_instance_profile_1",
            "id": "i-0f8937b3975b00dab",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sds-midterm",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0c4fb8b81af17e568"
              },
              {
                "delete_on_termination": false,
                "device_index": 1,
                "network_card_index": 0,
                "network_interface_id": "eni-06de2bef8b9257101"
              }
            ],
            "primary_network_interface_id": "eni-0c4fb8b81af17e568",
            "private_dns": "ip-10-0-1-145.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.145",
            "public_ip": "52.74.226.175",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-091e9696ff7b496bd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00eaf2d006f48c8ec",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0413c57693decc7a1"
            ]
          },
          "dependencies": [
            "aws_eip.web",
            "aws_iam_instance_profile.web_instance_profile",
            "aws_iam_role.web_iam_role",
            "aws_instance.db",
            "aws_key_pair.key_auth",
            "aws_network_interface.db",
            "aws_network_interface.db_web",
            "aws_network_interface.web",
            "aws_network_interface.web_db",
            "aws_security_group.db",
            "aws_security_group.db_web",
            "aws_security_group.web",
            "aws_security_group.web_db",
            "aws_subnet.subnet_private_1",
            "aws_subnet.subnet_private_2",
            "aws_subnet.subnet_public_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:internet-gateway/igw-047db19b842fb6856",
            "id": "igw-047db19b842fb6856",
            "owner_id": "379535746181",
            "tags": {
              "Name": "sds-igw"
            },
            "tags_all": {
              "Name": "sds-igw"
            },
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06f4c8a24f11bef02",
            "connectivity_type": "public",
            "id": "nat-0930907b38e396a95",
            "network_interface_id": "eni-066ae0c1795591331",
            "private_ip": "10.0.2.227",
            "public_ip": "54.251.145.104",
            "subnet_id": "subnet-03a8c602fdb767560",
            "tags": {
              "Name": "gw NAT"
            },
            "tags_all": {
              "Name": "gw NAT"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.subnet_public_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:network-interface/eni-03996975926d0a879",
            "id": "eni-03996975926d0a879",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:3b:17:dc:e4:fc",
            "owner_id": "379535746181",
            "private_ip": "10.0.102.88",
            "private_ip_list": [
              "10.0.102.88"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.102.88"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-083a0ff8c4e0d7f31"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5384e98f92fe6a7",
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            }
          },
          "dependencies": [
            "aws_security_group.db",
            "aws_subnet.subnet_private_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "db_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:network-interface/eni-0abdad60d9494721b",
            "id": "eni-0abdad60d9494721b",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:97:37:5a:c8:58",
            "owner_id": "379535746181",
            "private_ip": "10.0.101.214",
            "private_ip_list": [
              "10.0.101.214"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.101.214"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0c1f713e8442cc99b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b3ee330d6c46d40",
            "tags": {
              "Name": "web_db"
            },
            "tags_all": {
              "Name": "web_db"
            }
          },
          "dependencies": [
            "aws_security_group.db_web",
            "aws_subnet.subnet_private_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:network-interface/eni-0c4fb8b81af17e568",
            "id": "eni-0c4fb8b81af17e568",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:2a:3b:99:26:02",
            "owner_id": "379535746181",
            "private_ip": "10.0.1.145",
            "private_ip_list": [
              "10.0.1.145"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.145"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0413c57693decc7a1"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00eaf2d006f48c8ec",
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            }
          },
          "dependencies": [
            "aws_security_group.web",
            "aws_subnet.subnet_public_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "web_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:network-interface/eni-06de2bef8b9257101",
            "id": "eni-06de2bef8b9257101",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:c0:8f:3e:da:c6",
            "owner_id": "379535746181",
            "private_ip": "10.0.101.34",
            "private_ip_list": [
              "10.0.101.34"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.101.34"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-09ac60db6cf781718"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01b3ee330d6c46d40",
            "tags": {
              "Name": "web_db"
            },
            "tags_all": {
              "Name": "web_db"
            }
          },
          "dependencies": [
            "aws_security_group.web_db",
            "aws_subnet.subnet_private_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "to_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:route-table/rtb-03c9762158f66ffd6",
            "id": "rtb-03c9762158f66ffd6",
            "owner_id": "379535746181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-047db19b842fb6856",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_igw"
            },
            "tags_all": {
              "Name": "table_igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "to_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:route-table/rtb-027a5c731a65debec",
            "id": "rtb-027a5c731a65debec",
            "owner_id": "379535746181",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0930907b38e396a95",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "table_nat"
            },
            "tags_all": {
              "Name": "table_nat"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.subnet_public_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ad4b0f67064fb49",
            "route_table_id": "rtb-027a5c731a65debec",
            "subnet_id": "subnet-0c5384e98f92fe6a7"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.to_nat",
            "aws_subnet.subnet_private_2",
            "aws_subnet.subnet_public_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-063025b55ae759eae",
            "route_table_id": "rtb-03c9762158f66ffd6",
            "subnet_id": "subnet-00eaf2d006f48c8ec"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.to_igw",
            "aws_subnet.subnet_public_1",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0230002a272ffaf8c",
            "route_table_id": "rtb-03c9762158f66ffd6",
            "subnet_id": "subnet-03a8c602fdb767560"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.to_igw",
            "aws_subnet.subnet_public_2",
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:security-group/sg-083a0ff8c4e0d7f31",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083a0ff8c4e0d7f31",
            "ingress": [],
            "name": "db",
            "name_prefix": "",
            "owner_id": "379535746181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db"
            },
            "tags_all": {
              "Name": "db"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:security-group/sg-0c1f713e8442cc99b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c1f713e8442cc99b",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db_web",
            "name_prefix": "",
            "owner_id": "379535746181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db_web"
            },
            "tags_all": {
              "Name": "db_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:security-group/sg-0413c57693decc7a1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0413c57693decc7a1",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "web",
            "name_prefix": "",
            "owner_id": "379535746181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web"
            },
            "tags_all": {
              "Name": "web"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:security-group/sg-09ac60db6cf781718",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-09ac60db6cf781718",
            "ingress": [],
            "name": "web_db",
            "name_prefix": "",
            "owner_id": "379535746181",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web_db"
            },
            "tags_all": {
              "Name": "web_db"
            },
            "timeouts": null,
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:subnet/subnet-01b3ee330d6c46d40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01b3ee330d6c46d40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379535746181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sds_private_1"
            },
            "tags_all": {
              "Name": "sds_private_1"
            },
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_private_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:subnet/subnet-0c5384e98f92fe6a7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5384e98f92fe6a7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379535746181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sds_private_2"
            },
            "tags_all": {
              "Name": "sds_private_2"
            },
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:subnet/subnet-00eaf2d006f48c8ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00eaf2d006f48c8ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379535746181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sds_public_1"
            },
            "tags_all": {
              "Name": "sds_public_1"
            },
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:subnet/subnet-03a8c602fdb767560",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03a8c602fdb767560",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "379535746181",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "sds_public_2"
            },
            "tags_all": {
              "Name": "sds_public_2"
            },
            "vpc_id": "vpc-074a67ce18ffe7fbd"
          },
          "dependencies": [
            "aws_vpc.vpc_main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:379535746181:vpc/vpc-074a67ce18ffe7fbd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00a45fb4e1ec74205",
            "default_route_table_id": "rtb-0eb5384ef669e2777",
            "default_security_group_id": "sg-0ec62d4115d6a48e0",
            "dhcp_options_id": "dopt-2346f247",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-074a67ce18ffe7fbd",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eb5384ef669e2777",
            "owner_id": "379535746181",
            "tags": {
              "Name": "sds-midterm-vpc"
            },
            "tags_all": {
              "Name": "sds-midterm-vpc"
            }
          }
        }
      ]
    }
  ]
}